--- a/src/layouts/Shell.css
+++ b/src/layouts/Shell.css
@@ -53,31 +53,32 @@
 @media screen and (min-width: 640px) {
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
   :root {
+    --size-page-padding: clamp(10%, 12.5vw, 25%);
+  }
+}
+
+@media screen and (min-width: 1601px) {
+  :root {
+    --font-size: 16px;
     --size-page-padding: clamp(10%, 20vw, 25%);
   }
 }
 
-@media screen and (min-width: 1600px) {
-  :root {
-    --font-size: 16px;
-  }
-}
-
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 1921px) {
   :root {
     --font-size: 18px;
   }
 }
 
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 2561px) {
   :root {
     --font-size: 20px;
   }
 }
 
-@media screen and (min-width: 2800px) {
+@media screen and (min-width: 2801px) {
   :root {
     --font-size: 26px;
   }
