chore: enhance spotlight responsiveness

--- a/src/components/BackgroundIcon.astro
+++ b/src/components/BackgroundIcon.astro
@@ -23,11 +23,11 @@ const { image, dominantColor, otherColor } = Astro.props;
     align-items: center;
     justify-content: flex-end;
     overflow: hidden;
-  }
 
-  .background-icon img {
-    height: 30%;
-    object-fit: contain;
-    z-index: 1;
+    img {
+      height: 30%;
+      object-fit: contain;
+      z-index: 1;
+    }
   }
 </style>
