--- a/src/layouts/sections/ServicesSection.astro
+++ b/src/layouts/sections/ServicesSection.astro
@@ -1,11 +1,13 @@
-<section>
+<section class="page-padding">
+  <header>
+    <slot name="title" />
+  </header>
   <slot />
 </section>
 
 <style>
   section {
     background-color: var(--color-white);
-    padding: 8rem var(--size-page-padding);
     z-index: 1;
 
     .tab {
