--- a/src/layouts/sections/TeamSection.astro
+++ b/src/layouts/sections/TeamSection.astro
@@ -31,7 +31,7 @@ const team = await getCollection("team", (entry) => entry.data.locale === locale
   section {
     & > div {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
       gap: var(--size-gutter-huge);
       justify-items: center;
 
