--- a/src/layouts/Shell.css
+++ b/src/layouts/Shell.css
@@ -28,6 +28,7 @@
   --color-background: #ede9df;
   --color-black: #231f20;
   --color-white: #fbfffb;
+  --color-overlay: #f7f9f3;
 
   --size-gutter: 1rem;
   --size-gutter-big: 2rem;
