feat: add responsiveness to timeline component

--- a/src/layouts/sections/FormationSection.astro
+++ b/src/layouts/sections/FormationSection.astro
@@ -39,4 +39,11 @@ const formationData = timelineCollection
     column-gap: 1.5rem;
     grid-template-columns: 60% 40%;
   }
+
+  @media screen and (max-width: 1025px) {
+    section {
+      grid-template-columns: 100%;
+      row-gap: 1rem;
+    }
+  }
 </style>
