--- a/src/layouts/sections/FormationSection.astro
+++ b/src/layouts/sections/FormationSection.astro
@@ -2,11 +2,13 @@
 import { currentLocale } from "astro-nanostores-i18n:runtime";
 import Timeline from "../../components/Timeline.astro";
 import { getCollection } from "astro:content";
+import TimelineEntry from "../../components/TimelineEntry.astro";
 
 type Props = {
   key: string;
   class?: string;
   last?: boolean;
+  start?: boolean;
 };
 
 const { key, class: className, last } = Astro.props;
@@ -27,23 +29,44 @@ const formationData = timelineCollection
 
 <section class:list={[className]}>
   <div>
-    <slot name="title" />
     <slot />
   </div>
-  <Timeline elements={formationData} shortSpine={last} />
+  <div class="timeline">
+    <Timeline shortSpine={last}>
+      {
+        formationData.map((element) => (
+          <TimelineEntry>
+            <div class="title">{element.title}</div>
+            <p>{element.text}</p>
+          </TimelineEntry>
+        ))
+      }
+    </Timeline>
+  </div>
 </section>
 
 <style>
   section {
     display: grid;
     column-gap: 1.5rem;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 55% 45%;
   }
 
   @media screen and (max-width: 1025px) {
     section {
       grid-template-columns: 100%;
       row-gap: 1rem;
+    }
+  }
+
+  .title {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  @media screen and (min-width: 1025px) {
+    .timeline {
+      margin-top: 2.2em;
     }
   }
 </style>
