--- a/src/components/TimelineEntry.astro
+++ b/src/components/TimelineEntry.astro
@@ -14,7 +14,6 @@
     padding: 1rem;
     background: var(--color-overlay);
     width: 45%;
-    box-shadow: 0px 15px 30px -15px rgba(0, 0, 0, 0.5);
   }
 
   li::after {
@@ -22,9 +21,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    border-width: 4px;
-    border-style: solid;
-    border-color: var(--color-primary);
+    border: 4px solid var(--color-primary);
     background: var(--color-white);
     position: absolute;
     left: 50%;
