--- a/src/layouts/sections/FormationSection.astro
+++ b/src/layouts/sections/FormationSection.astro
@@ -7,11 +7,9 @@ import TimelineEntry from "../../components/TimelineEntry.astro";
 type Props = {
   key: string;
   class?: string;
-  last?: boolean;
-  start?: boolean;
 };
 
-const { key, class: className, last } = Astro.props;
+const { key, class: className } = Astro.props;
 
 const locale = currentLocale.get();
 
@@ -32,7 +30,7 @@ const formationData = timelineCollection
     <slot />
   </div>
   <div class="timeline">
-    <Timeline shortSpine={last}>
+    <Timeline>
       {
         formationData.map((element) => (
           <TimelineEntry>
@@ -48,25 +46,25 @@ const formationData = timelineCollection
 <style>
   section {
     display: grid;
-    column-gap: 1.5rem;
+    column-gap: var(--size-gutter-medium);
     grid-template-columns: 55% 45%;
   }
 
   @media screen and (max-width: 1025px) {
     section {
       grid-template-columns: 100%;
-      row-gap: 1rem;
+      row-gap: var(--size-gutter);
     }
   }
 
   .title {
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: bold;
   }
 
   @media screen and (min-width: 1025px) {
     .timeline {
-      margin-top: 2.2em;
+      margin-top: var(--heading-margin);
     }
   }
 </style>
