chore: clean up

--- a/src/layouts/Shell.css
+++ b/src/layouts/Shell.css
@@ -31,7 +31,7 @@
   --color-overlay: #f7f9f3;
 
   --size-gutter: 1rem;
-  --size-gutter: 1.5rem;
+  --size-gutter-medium: 1.5rem;
   --size-gutter-big: 2rem;
   --size-gutter-huge: 4rem;
   --size-gutter-massive: 8rem;
