--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -20,7 +20,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: var(--timeline-gap);
+    gap: var(--size-gutter-big);
   }
 
   /* spine of the timeline */
