--- a/src/layouts/groups/Contact.astro
+++ b/src/layouts/groups/Contact.astro
@@ -21,7 +21,7 @@ const locale = currentLocale.get();
     <Email />
   </li>
   {
-    withoutLanguageSwitcher ? null : (
+    withoutLanguageSwitcher || !translations ? null : (
       <li>
         <LanguageSwitcher locale={locale} translations={translations} />
       </li>
